--- a/public/css/listes.css
+++ b/public/css/listes.css
@@ -86,7 +86,7 @@ body {
     margin-right: 20px; 
 }
 
-#bSearch{
+#bSearch, .submitB{
     padding: 8px 12px;
     border: none;
     border-radius: 4px;
@@ -97,7 +97,7 @@ body {
     background-color: #3498DB; 
 }
 
-#bSearch:hover {
+#bSearch:hover, .submitB:hover {
     background-color: #2980B9;
 }
 
