--- a/public/css/addpaie.css
+++ b/public/css/addpaie.css
@@ -110,7 +110,6 @@ body {
 
 .page {
     padding: 20px;
-    padding-top: 30px;
     background-color: #f5f5f5; 
     color: #333;
     flex-grow: 1;
@@ -121,22 +120,26 @@ h1 {
     color: #333;
     margin-bottom: 20px;
 }
-h2{
-    margin: 20px 0px; 
-}
+
 .content {
     display: flex;
     gap: 20px;
-    flex: 1;
-    margin-top: 10px;
 }
 
-.infos-dette{
+.infos {
+    flex: 1;
+    background-color: #072e33;
+    border-radius: 10px;
+    padding: 30px 20px 20px 20px;
+    color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.dette-paiement {
+    flex: 1;
     display: flex;
     flex-direction: column;
-    gap:3px;
-    font-size: 18px;
-    padding-left: 5px;
+    gap: 20px;
 }
 
 .dette {
@@ -145,7 +148,6 @@ h2{
     padding: 20px;
     color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 50%;
 }
 
 .paiement {
@@ -154,7 +156,6 @@ h2{
     padding: 20px;
     color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 45%;
 }
 
 label {
@@ -164,7 +165,7 @@ label {
     margin-bottom: 5px;
     padding-top: 5px;
 }
-.paiement input{
+.paiement input, .infos input{
     margin-bottom: 10px;
     border-radius: 4px;
     border: none;
