--- a/views/pages/dette.html
+++ b/views/pages/dette.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="asside">
+        <div class="main">
             <?php
                 include "../views/partial/header.html.php"
             ?>
@@ -19,8 +19,7 @@
                 <h1>Ajout D'une Dette</h1>
                 <div class="addDette">
                     <div class="side left">
-                        <h3>Enregistrer Clients</h3>
-                        <a href="http://www.mouhamet-thiam.ism.edu.sn/index.php?page=4" class="newClient">+ Créer un nouveau client</a>
+                        <h3>Enregistrer nouveau Clients</h3>
                         <div class="saveClient">
                             <label for="nom">Nom</label>
                             <input type="text" name="nom" id="nom" placeholder="Entrez le nom" />
@@ -28,26 +27,12 @@
                             <input type="text" name="prenom" id="prenom" placeholder="Entrez le prenom"/>
                             <label for="numero">Numero</label>
                             <input type="number" name="numero" id="numero" placeholder="Entrez le numero">
-                            <p class="total"><strong>Total du:</strong> 120.000 CFA</p>
-                            <h4>Dettes Récentes</h4>
-                            <table class="tabDette">
-                                <thead>
-                                    <tr>
-                                        <th>Date</th>
-                                        <th>Montant</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>03/11/2024</td>
-                                        <td>50.000 CFA</td>
-                                    </tr>
-                                    <tr>
-                                        <td>01/11/2024</td>
-                                        <td>30.000 CFA</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <label for="numero">Adresse</label>
+                            <textarea name="" id=""placeholder="Entrez l'adresse'"></textarea>
+                        </div>
+                        <div class="buttons">
+                            <button class="annuler" onclick="window.location.href='<?php echo WEBROOT; ?>?controller=client&page=2'">Annuler</button>
+                            <button class="enregistrer" onclick="window.location.href='<?php echo WEBROOT; ?>?controller=client&page=2'">Enregistrer</button>
                         </div>
                     </div>
                     <div class="side right">
@@ -82,8 +67,8 @@
                             </div>
                         </div>
                         <div class="buttons">
-                            <button class="annuler" onclick="window.location.href='http://www.mouhamet-thiam.ism.edu.sn/index.php?page=2'">Annuler</button>
-                            <button class="enregistrer" onclick="window.location.href='http://www.mouhamet-thiam.ism.edu.sn/index.php?page=2'">Enregistrer</button>
+                            <button class="annuler" onclick="window.location.href='<?php echo WEBROOT; ?>?controller=client&page=2'">Annuler</button>
+                            <button class="enregistrer" onclick="window.location.href='<?php echo WEBROOT; ?>?controller=client&page=2'">Enregistrer</button>
                         </div>
                     </div>
                 </div>
@@ -91,7 +76,7 @@
         </div>
     </div>
     <?php
-        //include "../views/partial/menu.html.php";
+        include "../views/partial/menu.html.php";
     ?>
 </body>
 </html>
