--- a/public/css/addProduit.css
+++ b/public/css/addProduit.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Oswald:wght@200..700&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -7,10 +5,10 @@
 }
 
 body {
-    font-family: "Nanum Gothic", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
-    background-color: #e6e6e6;
 }
+
 
 .container {
     display: flex;
