--- a/public/css/addpaie.css
+++ b/public/css/addpaie.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Oswald:wght@200..700&family=Playwrite+PE:wght@100..400&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -6,9 +5,10 @@
 }
 
 body {
-    font-family: "Nanum Gothic", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
 }
+
 
 .container {
     display: flex;
