--- a/public/css/cumDette.css
+++ b/public/css/cumDette.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Oswald:wght@200..700&family=Playwrite+PE:wght@100..400&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +5,7 @@
 }
 
 body {
-    font-family: "Nanum Gothic", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
 }
 
@@ -157,15 +156,4 @@ h1 {
     background-color: #f5f5f5;
 }
 
-.filtrerTout{
-    color: #072e33 !important;
-}
 
-.filtre{
-    display: flex;
-    background-color: #0c7075;
-    color: #fff;
-    gap: 10px;
-    width: 34%;
-    padding: 10px;
-}
